# clean_XSOM

./: CMakeLists.txt  test.cpp
1SOM/: Display.cpp  Display.hpp  State.cpp  State.hpp  main.cpp
2SOM/: Display_retro.cpp  Simple_state.cpp  Simple_state.hpp  helpers.cpp  helpers.hpp  main_retro.cpp  main_test.cpp  sequence_energy_test.cpp  sequence_film.cpp  sequence_retro.cpp
2SOM_colors/: 2D_state.cpp  2D_state.hpp  Display.cpp  Display.hpp  Display2d.cpp  Display2d.hpp  Simple_state.cpp  Simple_state.hpp  main_colors.cpp  main_colors2d.cpp
2SOM_forced/: Display_retro.cpp  Simple_state.cpp  Simple_state.cpp~  Simple_state.hpp  Simple_state.hpp~  main_retro.cpp  main_retro.cpp~
2SOM_same/: Display.cpp  Display.hpp  State.cpp  State.hpp  main.cpp
2SOM_simple/: Display.cpp  Display.hpp  Sequences.hpp  Simple_state.cpp  Simple_state.hpp  main.cpp
2SOM_with_rec/: Display_retro.cpp  Display_retro.hpp  Simple_state.cpp  Simple_state.hpp  main_retro.cpp
3SOM/: Display_retro.cpp  Display_retro.hpp  Simple_state.cpp  Simple_state.hpp  main.cpp
3SOM_asso/: Display_retro.cpp  Display_retro.hpp  Simple_state.cpp  Simple_state.hpp  main_retro.cpp  main_retro_2_phases.cpp
3SOM_retro/: Display_retro.cpp  Simple_state.cpp  Simple_state.hpp  main.cpp
classes/: InputSampler.hpp
files/: map1_w_2019-12-3_16-25.data  map2_w_2019-12-3_16-25.data  weights1.txt  weights2.txt
rec_SOM/: Display.cpp  Display.hpp  Simple_state.cpp  Simple_state.hpp  main.cpp
scripts/: Untitled.ipynb  activity.py  analyse_bmus.py  analyse_trajectory.py  analyse_weights_1301.py  erreur.py  (+8 more)
(+1 files in other folders)
